# glance

./: LICENSE  README.md  cargo-sources.json  com.github.WRVbit.glance.desktop  com.github.WRVbit.glance.metainfo.xml  com.github.WRVbit.glance.yml  index.html  node-sources.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: snap.yml
packaging/aur/: PKGBUILD
packaging/rpm/: glance.spec
packaging/snap/: snapcraft.yaml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/adapters/: arch.rs  debian.rs  fedora.rs  mod.rs  package_manager.rs  suse.rs
src-tauri/src/modules/: cleaner.rs  dns.rs  gaming.rs  hosts.rs  mod.rs  packages.rs  processes.rs  repositories.rs  resources.rs  services.rs  startup.rs  system_stats.rs  tweaks.rs
src-tauri/src/utils/: context.rs  desktop.rs  distro.rs  mod.rs  privileged.rs
src/lib/services/: cleaner.ts  dns.ts  hosts.ts  packages.ts  repositories.ts  resources.ts  services.ts  system.ts  tweaks.ts
