[package]
name = "glance"
version = "0.1.0"
description = "A modern Linux system optimizer - inspired by Stacer"
authors = ["alfarez"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
sysinfo = "0.35"
thiserror = "2"
anyhow = "1"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process", "sync"] }
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = false }
futures = "0.3"

